--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0; 
 }
+
+body h1 {
+  text-align: center;
+}
+
+#featured-property{
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+header nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+
+#featured-property p{
+  text-align: center;
+  font-size: smaller;
+  max-width: 800px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+
+
+
